1.9.26
------
(RB=210935)
Added the ability to inject MaskTree (@Projection) and PathKeys (@Keys) from a
request into a method.  This allows KeyValueResources to be able to use
Projections and PathKeys in their method implementations.

1.9.25
------
(RB=211206, 211283)
Added ability for clients to specify either actual lists or string representation of lists for transport client properties.

1.9.24
------
(RB=202295)
Refactor IDL and Snapshot compatibility checks. Move file number checks to their
own tasks. Add in a flag -Prest.idl.skipCheck to allow all IDL checks to be
skipped. (IDL file count check is still run with -Prest.idl.compatibility=OFF)

(RB=208110)
Add InvokeAware interface to allow user code to listen to the restli method invocation events in restli server.

(RB=209638)
Add ProjectionMode option in ResourceContext to allow rest.li service implementers
to disable automatic projection when they are explicitly examining and applying
projections.

1.9.23
------
(RB=206396)
To detect, as early as possible, a mistake that is otherwise difficult to debug, add 
check during data template generation that verifies filename and path match schema 
name and namespace.

(RB=207258)
Add configuration to allow the rest.li server to limit exception details in responses and to customize the default response for internal server error responses.

1.9.22
------
(RB=206507)
Allow routing to batch partial update with no "X-RestLi-Method" HTTP header.

(RB=206724)
Support more HTTP header manipulation methods in restli-client request builder.

1.9.21
------
(RB=204527)
Add spring and guice support, enables running rest.li servlets with dependency injection, also add a logging filter.

(RB=205233)
Fix bug in D2Config that service variant doesn't point to master colo when defaultRoutingToMaster is set.

(RB=204500)
Fix bug that R2 Client may lose connection forever after the server being bounced when there is a very high downstream
qps and D2 is not used.

1.9.20
------