@@ -46,6 +46,8 @@
         "method" : "partial_update"
       }, {
         "method" : "batch_get"
+      }, {
+        "method" : "batch_update"
       } ],
       "entity" : {
         "path" : "/complexKeys/{keys}"
@@ -57,7 +59,7 @@
           "type" : "string"
         } ]
       } ],
-      "supports" : [ "batch_get", "create", "get", "partial_update" ],
+      "supports" : [ "batch_get", "batch_update", "create", "get", "partial_update" ],
       "identifier" : {
         "name" : "keys",
         "params" : "com.linkedin.restli.examples.greetings.api.TwoPartKey",
